Overflow x issue fixed

--- a/src/components/expertise/expertise.css
+++ b/src/components/expertise/expertise.css
@@ -2,4 +2,5 @@
     padding: 150px 0;
     width: 100%;
     background: #000;
+    overflow-x: hidden;
 }
